<?xml version="1.0" encoding="utf-8"?>

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.preference.PreferenceCategory android:title="@string/notification">

        <androidx.preference.CheckBoxPreference
            android:defaultValue="true"
            android:key="notification_vibrate"
            android:summary="@string/notifications_use_vibration_summary"
            android:title="@string/notifications_use_vibration" />

        <androidx.preference.CheckBoxPreference
            android:defaultValue="true"
            android:key="notification_sound"
            android:summary="@string/notifications_use_sounds_summary"
            android:title="@string/notifications_use_sounds" />

        <androidx.preference.CheckBoxPreference
            android:defaultValue="true"
            android:key="notification_light"
            android:summary="@string/notifications_use_lights_summary"
            android:title="@string/notifications_use_lights" />

    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>
