<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_action_share_trebleshot"
        android:icon="@drawable/ic_round_send_24"
        android:title="@string/share"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_action_save"
        android:icon="@drawable/ic_save_white_24dp"
        android:title="@string/save" />

    <item
        android:id="@+id/menu_action_copy"
        android:icon="@drawable/ic_content_copy_white_24dp"
        android:title="@string/copy_to_clipboard" />

    <item
        android:id="@+id/menu_action_share"
        android:icon="@drawable/ic_share_white_24dp"
        android:title="@string/share_with_other_apps" />

    <item
        android:id="@+id/menu_action_show_as_qr_code"
        android:icon="@drawable/ic_qrcode_white_24dp"
        android:title="@string/show_as_qr_code" />

    <item
        android:id="@+id/menu_action_remove"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/remove" />
</menu>
