<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.preference.ListPreference
        android:defaultValue="light"
        android:key="theme"
        android:title="@string/ui_theme"
        android:summary="%s"
        android:icon="@drawable/ic_palette_white_24dp" />

    <androidx.preference.CheckBoxPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_invert_colors_black_24dp"
        android:key="amoled_theme"
        android:summary="@string/theme_optimize_summary"
        android:title="@string/theme_optimize" />

    <androidx.preference.CheckBoxPreference
        android:defaultValue="false"
        android:key="custom_fonts"
        android:title="@string/use_recommended_fonts"
        app:icon="@drawable/ic_short_text_white_24dp" />

</androidx.preference.PreferenceScreen>
