<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/locations_default"
        android:orderInCategory="1">

        <item
            android:id="@+id/storage_folder"
            android:title="@string/storage_folder"
            app:icon="@drawable/ic_home_white_24dp" />

        <item
            android:id="@+id/default_storage_folder"
            android:title="@string/default_folder"
            app:icon="@drawable/ic_trebleshot" />

    </group>

    <group
        android:id="@+id/locations_custom"
        android:orderInCategory="2" />

    <group
        android:id="@+id/locations_options"
        android:orderInCategory="3">

        <item
            android:id="@+id/clear_storage_list"
            android:title="@string/clear_storage_list" />

        <item
            android:id="@+id/add_storage"
            android:title="@string/add_storage_access"
            app:icon="@drawable/ic_add_white_24dp" />

    </group>
</menu>
