<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/selections"
        android:title="@string/selections"
        android:orderInCategory="1"
        android:enabled="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/shareOnWeb"
        android:title="@string/share_on_web"
        android:icon="@drawable/ic_web_white_24dp"
        android:orderInCategory="2"
        android:enabled="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/share"
        android:title="@string/share"
        android:icon="@drawable/ic_round_send_24"
        android:orderInCategory="3"
        android:enabled="false"
        app:showAsAction="always" />

</menu>
