<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_content_browser"
    app:startDestination="@id/contentBrowserFragment">

    <fragment
        android:id="@+id/contentBrowserFragment"
        android:name="org.monora.uprotocol.client.android.fragment.ContentBrowserFragment"
        android:label="@string/sends">
        <action
            android:id="@+id/action_contentBrowserFragment_to_prepareIndexFragment"
            app:destination="@id/prepareIndexFragment" />
        <action
            android:id="@+id/action_contentBrowserFragment_to_webShareLauncherFragment"
            app:destination="@id/webShareLauncherFragment" />
        <action
            android:id="@+id/action_contentBrowserFragment_to_selectionsFragment"
            app:destination="@id/selectionsFragment" />
        <action
            android:id="@+id/action_contentBrowserFragment_to_nav_transfer_details"
            app:destination="@id/nav_transfer_details"
            app:popUpTo="@id/contentBrowserFragment"
            app:popUpToInclusive="true">
            <argument
                android:name="transfer"
                app:argType="org.monora.uprotocol.client.android.database.model.Transfer" />
        </action>
    </fragment>
    <dialog
        android:id="@+id/prepareIndexFragment"
        android:name="org.monora.uprotocol.client.android.fragment.content.transfer.PrepareIndexFragment"
        android:label="@string/preparing">
        <action
            android:id="@+id/action_prepareIndexFragment_to_nav_pick_client"
            app:destination="@id/nav_pick_client">
            <argument
                android:name="direction"
                app:argType="org.monora.uprotocol.core.protocol.Direction"
                android:defaultValue="Outgoing" />
        </action>
    </dialog>
    <include app:graph="@navigation/nav_transfer_details" />
    <include app:graph="@navigation/nav_pick_client" />
    <dialog
        android:id="@+id/webShareLauncherFragment"
        android:name="org.monora.uprotocol.client.android.fragment.content.transfer.WebShareLauncherFragment"
        android:label="@string/web_share" />
    <dialog
        android:id="@+id/selectionsFragment"
        android:name="org.monora.uprotocol.client.android.fragment.content.SelectionsFragment"
        android:label="@string/selections" />
</navigation>
