<?xml version="1.0" encoding="utf-8"?>

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_transfer_details"
    app:startDestination="@id/transferDetailsFragment">

    <fragment
        android:id="@+id/transferDetailsFragment"
        android:name="org.monora.uprotocol.client.android.fragment.TransferDetailsFragment"
        android:label="@string/transfer_details">
        <argument
            android:name="transfer"
            app:argType="org.monora.uprotocol.client.android.database.model.Transfer" />
        <action
            android:id="@+id/action_transferDetailsFragment_to_TransferItemFragment"
            app:destination="@id/TransferItemFragment" />
        <action
            android:id="@+id/action_transferDetailsFragment_to_clientDetailsFragment2"
            app:destination="@id/clientDetailsFragment2" />
    </fragment>
    <dialog
        android:id="@+id/TransferItemFragment"
        android:name="org.monora.uprotocol.client.android.fragment.TransferItemFragment"
        android:label="@string/files">
        <argument
            android:name="transfer"
            app:argType="org.monora.uprotocol.client.android.database.model.Transfer" />
    </dialog>
    <dialog
        android:id="@+id/clientDetailsFragment2"
        android:name="org.monora.uprotocol.client.android.fragment.ClientDetailsFragment"
        android:label="@string/client_details">
        <argument
            android:name="client"
            app:argType="org.monora.uprotocol.client.android.database.model.UClient" />
    </dialog>
</navigation>
