<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingBottom="24dp">

        <ImageView
            android:id="@+id/uprotocolImage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:layout_constraintBottom_toBottomOf="@+id/titleText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/titleText"
            app:srcCompat="@drawable/ic_uprotocol"
            app:tint="?colorPrimary" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?textAppearanceHeadline5"
            android:text="@string/about_uprotocol"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/uprotocolImage" />

        <TextView
            android:id="@+id/contentText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?textAppearanceBody1"
            android:text="@string/about_uprotocol_content"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/titleText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/githubButton"
            style="?materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/github"
            android:layout_marginTop="24dp"
            app:icon="@drawable/ic_github_circle_white_24dp"
            app:layout_constraintTop_toBottomOf="@id/contentText"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
