<?xml version="1.0" encoding="utf-8"?>

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_home"
    app:startDestination="@id/transferHistoryFragment">

    <action
        android:id="@+id/action_global_profileEditorFragment"
        app:destination="@id/profileEditorFragment" />

    <fragment
        android:id="@+id/transferHistoryFragment"
        android:name="org.monora.uprotocol.client.android.fragment.TransferHistoryFragment"
        android:label="@string/transfer_history">
        <action
            android:id="@+id/action_transferHistoryFragment_to_nav_receive"
            app:destination="@id/nav_receive" />
        <action
            android:id="@+id/action_transferHistoryFragment_to_nav_text_editor"
            app:destination="@id/nav_text_editor">
            <argument
                android:name="sharedText"
                android:defaultValue="@null"
                app:argType="org.monora.uprotocol.client.android.database.model.SharedText"
                app:nullable="true" />
            <argument
                android:name="text"
                android:defaultValue="@null"
                app:argType="string"
                app:nullable="true" />
        </action>
        <action
            android:id="@+id/action_transferHistoryFragment_to_webTransferDetailsFragment"
            app:destination="@id/webTransferDetailsFragment" />
    </fragment>

    <dialog
        android:id="@+id/profileEditorFragment"
        android:name="org.monora.uprotocol.client.android.fragment.ProfileEditorFragment"
        android:label="@string/edit_profile" />

    <include app:graph="@navigation/nav_receive" />
    <include app:graph="@navigation/nav_manage_clients" />
    <action
        android:id="@+id/action_global_nav_manage_devices"
        app:destination="@id/nav_manage_devices" />
    <include app:graph="@navigation/nav_text_editor" />
    <dialog
        android:id="@+id/webTransferDetailsFragment"
        android:name="org.monora.uprotocol.client.android.fragment.WebTransferDetailsFragment"
        android:label="@string/transfer_details">
        <argument
            android:name="transfer"
            app:argType="org.monora.uprotocol.client.android.database.model.WebTransfer" />
    </dialog>
    <action
        android:id="@+id/action_global_nav_text_editor"
        app:destination="@id/nav_text_editor"
        app:launchSingleTop="true">
        <argument
            android:name="sharedText"
            app:argType="org.monora.uprotocol.client.android.database.model.SharedText"
            app:nullable="true"
            android:defaultValue="@null" />
        <argument
            android:name="text"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null"/>
    </action>
    <action
        android:id="@+id/action_global_webTransferDetailsFragment"
        app:destination="@id/webTransferDetailsFragment"
        app:launchSingleTop="true" />
</navigation>
